# french-admin-agentic-rag

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  demo_client.html  docker-compose.monitoring.yml  docker-compose.tracing.yml  docker-compose.yml  flush_redis.py  prometheus.yml  pyproject.toml  streamlit_app.py  test_output.txt
.antigravity/: settings.yaml
.githooks/: pre-commit  pre-push
.streamlit/: config.toml
docs/: architecture_evolution.md  finetuning_process.md  improvement_roadmap.md  production_roadmap.md  project_assessment.md  project_walkthrough.md  release_notes_v0.4.0.md  release_notes_v1.1.0.md  release_notes_v1.2.0.md  release_notes_v1.3.0.md  release_notes_v1.4.0.md  release_notes_v1.5.0.md  release_notes_v1.md  rule_system.md
evals/: README.md  enrich_golden_set.py  eval_guardrails.py  eval_performance.py  eval_rag_quality.py  interactive_scenarios.md  interactive_scenarios_fr.md  llm_judge.py  llm_judge_output.txt  llm_judge_results.json  run_evals.py
finetuning/: README.md  axolotl_config.yml  finetuning_workflow.md  run_training.sh  run_training_m4.sh
infrastructure/: docker-compose.yaml
k8s/: README.md  configmap.yaml  deployment-api.yaml  deployment-qdrant.yaml  deployment-redis.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.enc.yaml
scripts/: README.md  analyze_eval_results.py  analyze_training_data.py  export_samples_for_review.py  format_for_training.py  generate_eval_dataset.py  ingest_data.py  self_instruct_expansion.py  test_agent.py  test_memory.py  update_legal_data.py
skills/: admin_translator.py
src/: config.py  main.py  schemas.py
src/agents/: graph.py  (+6 more)
tests/: conftest.py  repro_language_switch.py  test_audit_surgical.py  verify_actionability.py  verify_polyglot.py
(+96 files in other folders)
