[project]
name = "french-admin-agentic-rag"
version = "0.1.0"
description = "French Administrative RAG Agent"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.0",
    "qdrant-client>=1.9.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "ragas>=0.1.7",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "datasets>=2.19.0",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.7",
    "langchain-qdrant>=0.1.0",
    "redis>=5.0.4",
    "python-multipart>=0.0.9",
    "sentence-transformers>=2.7.0",
    "pydantic-settings>=2.2.1",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
french-admin-rag = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
